fix(devx): removed {#} anchors and updated broken anchors

--- a/docs/content/about-iota/tokenomics/tokenomics.mdx
+++ b/docs/content/about-iota/tokenomics/tokenomics.mdx
@@ -6,7 +6,7 @@ The collective ideation that the term tokenomics encompasses includes a wide ran
 
 IOTA tokenomics are based on sound financial concepts informed by extensive blockchain research. Designed for scale, the IOTA tokenomics structure is designed to support the financial needs of web3 now and into the future.
 
-## The IOTA economy
+## The IOTA Economy
 
 Three main types of participants characterize the IOTA economy:
 
@@ -25,7 +25,7 @@ The IOTA economy is composed of four core components:
 - **Voting:** On-chain voting is used for governance and protocol upgrades.
 
 
-## Tokenomics visualized
+## Tokenomics Visualized
 
 The following flowchart presents the tokenomic flow of IOTA at a high level. Referring back to this chart after you learn concepts in this section should provide additional clarity.
 
