--- a/docs/content/developer/getting-started/_graphql-rpc.mdx
+++ b/docs/content/developer/getting-started/_graphql-rpc.mdx
@@ -278,7 +278,7 @@ fragment Value on MoveValue {
 }
 ```
 
-## Paginating checkpoints forward, five at a time {#page-forward}
+## Paginating checkpoints forward, five at a time
 
 ```graphql
 query ($after: String) {
@@ -303,7 +303,7 @@ This example uses GraphQL [variables](../graphql-rpc.mdx#variables) and [paginat
 
 :::
 
-## Paginating checkpoints backwards, five at a time {#page-back}
+## Paginating checkpoints backwards, five at a time
 
 ```graphql
 query ($before: String) {
