--- a/docs/content/developer/iota-101/transactions/ptb/prog-txn-blocks.mdx
+++ b/docs/content/developer/iota-101/transactions/ptb/prog-txn-blocks.mdx
@@ -96,7 +96,7 @@ Each command takes `Argument`s that specify the input or result being used. The 
 - `NestedResult(u16, u16)` uses the value from a previous command. The first `u16` is the index of the command in the command vector, and the second `u16` is the index of the result in the result vector of that command. For example, given a command vector of `[MoveCall1, MoveCall2, TransferObjects]` where `MoveCall2` has a result vector of `[Value1, Value2]`, `Value1` would be accessed with `NestedResult(1, 0)` and `Value2` would be accessed with `NestedResult(1, 1)`.
 - `Result(u16)` is a special form of `NestedResult` where `Result(i)` is roughly equivalent to `NestedResult(i, 0)`. Unlike `NestedResult(i, 0)`, `Result(i)`, however, this errors if the result array at index `i` is empty or has more than one value. The ultimate intention of `Result` is to allow accessing the entire result array, but that is not yet supported. So in its current state, `NestedResult` can be used instead of `Result` in all circumstances.
 
-## Execution {#execution}
+## Execution
 
 For the execution of PTBs, the input vector is populated by the input objects or pure value bytes. The transaction commands are then executed in order, and the results are stored in the result vector. Finally, the effects of the transaction are applied atomically. The following sections describe each aspect of execution in greater detail.
 
@@ -110,7 +110,7 @@ The most important thing to note at this stage is the effects on the gas coin. A
 
 Each transaction command is then executed in order. First, examine the rules around arguments, which are shared by all commands.
 
-#### Arguments {#arguments}
+#### Arguments
 
 You can use each argument by-reference or by-value. The usage is based on the type of the argument and the type signature of the command.
   - If the signature expects an `&mut T`, the runtime checks the argument has type `T` and it is then mutably borrowed.
@@ -196,7 +196,7 @@ This command has the form `MoveCall(Package, Module, Function, TypeArgs, Args)` 
 - The arguments `Args: [Argument]` are the arguments to the function being called. The arguments must be valid for the parameters as specified in the function's signature.
 - Unlike the other commands, the usage of the arguments and the number of results are dynamic in that they both depend on the signature of the Move function being called.
 
-#### `Publish` {#publish}
+#### `Publish`
 
 The command has the form `Publish(ModuleBytes, TransitiveDependencies)` where `ModuleBytes` are the bytes of the module being published and `TransitiveDependencies` is a vector of package Object ID dependencies to link against.
 
