--- a/docs/content/operator/archives.mdx
+++ b/docs/content/operator/archives.mdx
@@ -38,7 +38,7 @@ state-archive-read-config:
     use-for-pruning-watermark: true
 ```
 
-## Set up archival fallback {#set-up-archival-fallback}
+## Set up archival fallback
 
 To enable your node to fallback to an archive in case of lag, add this to your fullnode.yaml file:
 
