--- a/docs/content/operator/genesis.mdx
+++ b/docs/content/operator/genesis.mdx
@@ -8,4 +8,4 @@ Genesis is the initial state of the IOTA blockchain. To launch a network, the in
 
 The genesis.blob files for each network are in the [iota-genesis](https://github.com/iotaledger/iota-genesis) repository.
 
-See [IOTA Full Node](iota-full-node.mdx#set-up-from-source) for how to get the genesis.blob file for each network.
+See [IOTA Full Node](iota-full-node.mdx#setting-up-a-full-node-from-source) for how to get the genesis.blob file for each network.
