--- a/docs/content/references/exchange-integration-guide.mdx
+++ b/docs/content/references/exchange-integration-guide.mdx
@@ -7,7 +7,7 @@ import AlphaNet from "../_snippets/alphanet.mdx";
 
 This topic describes how to integrate IOTA, the token native to the IOTA network, into a cryptocurrency exchange. The specific requirements and processes to implement an integration vary between exchanges. Rather than provide a step-by-step guide, this topic provides information about the primary tasks necessary to complete an integration. After the guidance about how to configure an integration, you can also find information and code samples related to staking on the IOTA network.
 
-## Requirements to configure a IOTA integration {#requirements-iota-integration}
+## Requirements to configure a IOTA integration
 
 The requirements to configure a IOTA integration include:
 
@@ -19,11 +19,11 @@ The requirements to configure a IOTA integration include:
 
 For best results, run IOTA Full nodes on Linux. IOTA supports the Ubuntu and Debian distributions. You can also fun a Full node on macOS.
 
-## Configure a IOTA Full node {#configure-full-node}
+## Configure a IOTA Full node
 
 You can set up and configure a IOTA Full node using Docker or directly from source code in the IOTA GitHub repository.
 
-### Install a IOTA Full node using Docker {#full-node-docker}
+### Install a IOTA Full node using Docker
 
 Run the command in this section using the same branch of the repository for each. Replace `branch-name` with the branch you use. For example, use `devnet` to use the IOTA Devnet network, or use `testnet` to use the IOTA Testnet network. You must download all files to, and run all commands from, the same folder location.
 
@@ -55,7 +55,7 @@ Run the command in this section using the same branch of the repository for each
     docker-compose up -d
     ```
 
-## Install a IOTA Full node from source {#install-full-node-source}
+## Install a IOTA Full node from source
 
 Use the steps in this section to install and configure a IOTA Full node directly from the IOTA GitHub repository. These steps use [Cargo](https://doc.rust-lang.org/cargo/), the Rust package manager.
 
@@ -86,7 +86,7 @@ Use the steps in this section to install and configure a IOTA Full node directly
     cargo run --release --bin iota-node -- --config-path fullnode.yaml
     ```
 
-## Set up IOTA addresses {#setup-iota-addresses}
+## Set up IOTA addresses
 
 IOTA addresses do not require on-chain initialization, you can spend from an address if it corresponds to your private key. You can derive a 32-byte IOTA address by hashing the signature scheme flag byte concatenated with public key bytes `flag || pubkey` using the [BLAKE2b](https://www.blake2.net/) (256 bits output) hashing function.
 
@@ -104,11 +104,11 @@ let arr = hasher.finalize();
 let iota_address_string = hex::encode(arr);
 ```
 
-## Displaying addresses {#displaying-addresses}
+## Displaying addresses
 
 IOTA supports both addresses with and without a 0x prefix. IOTA recommends that you always include the 0x prefix in API calls and when you display user addresses.
 
-## Track balance changes for an address {#track-balance-changes}
+## Track balance changes for an address
 
 You can track balance changes by calling `iota_getBalance` at predefined intervals. This call returns the total balance for an address. The total includes any coin or token type, but this document focuses on IOTA. You can track changes in the total balance for an address between subsequent `iota_getBalance` requests.
 
@@ -158,7 +158,7 @@ async fn main() -> Result<(), anyhow::Error> {
 }
 ```
 
-## Use events to track balance changes for an address {#events-balance-changes}
+## Use events to track balance changes for an address
 
 You can also track the balance for an address by subscribing to all of the events emitted from it. Use a filter to include only the events related to IOTA coins, such as when the address acquires a coin or pays for a gas fee.
 The following example demonstrates how to filter events for an address using bash and cURL:
@@ -189,7 +189,7 @@ With this data, create a nextCursor as follows:
 nextCursor : {"txDigest": "GZQN9pE3Zr9ZfLzBK1BfVCXtbjx5xKMxPSEKaHDvL3E2","eventSeq": 6019}
 ```
 
-## Blocks vs Checkpoints {#blocks-vs-checkpoints}
+## Blocks vs Checkpoints
 
 IOTA is a DAG-based blockchain and uses checkpoints for node synchronization and global transaction ordering. Checkpoints differ from blocks in the following ways:
 
@@ -197,7 +197,7 @@ IOTA is a DAG-based blockchain and uses checkpoints for node synchronization and
 - Checkpoints do not fork, roll back, or reorganize.
 - IOTA creates one checkpoint about every 3 seconds.
 
-### Checkpoint API operations {#checkpoint-api-operations}
+### Checkpoint API operations
 
 IOTA Checkpoint API operations include:
 
@@ -205,7 +205,7 @@ IOTA Checkpoint API operations include:
 - [iota_getLatestCheckpointSequenceNumber](/iota-api-ref#iota_getlatestcheckpointsequencenumber) - Retrieves the sequence number of the most recently executed checkpoint.
 - iota_getCheckpoints - Retrieves a paginated list of checkpoints that occurred during the specified interval. Pending a future release.
 
-## IOTA Balance transfer {#iota-balance-transfer}
+## IOTA Balance transfer
 
 To transfer a specific amount of IOTA between addresses, you need a IOTA token object with that specific value. In IOTA, everything is an object, including IOTA tokens. The amount of IOTA in each IOTA token object varies. For example, an address could own 3 IOTA tokens with different values: one of 0.1 IOTA, a second of 1.0 IOTA, and a third with 0.005 IOTA. The total balance for the address equals the sum of the values of the individual IOTA token objects, in this case, 1.105 IOTA.
 
@@ -213,7 +213,7 @@ You can merge and split IOTA token objects to create token objects with specific
 
 To transfer a specific amount of IOTA, you need a IOTA token worth that specific amount. To get a IOTA token with that specific value, you might need to split or merge existing IOTA tokens. IOTA supports several methods to accomplish this, including some that do not require you to manually split or merge coins.
 
-## IOTA API operations for transfers {#api-operations-transfers}
+## IOTA API operations for transfers
 
 IOTA supports the following API operations related to transferring IOTA between addresses:
 
@@ -240,11 +240,11 @@ IOTA supports the following API operations related to transferring IOTA between 
 - [unsafe_transferIOTA](/iota-api-ref#unsafe_transferiota)
   This method accepts only one IOTA token object and an amount to send to the recipient. It uses the same token for gas fees, so the amount to transfer must be strictly less than the value of the IOTA token used.
 
-## Signing Transactions {#signing-transactions}
+## Signing Transactions
 
 Please refer to IOTA Signatures for more details on signature validity requirements.
 
-## IOTA Staking {#iota-staking}
+## IOTA Staking
 
 The IOTA blockchain uses a Delegated Proof-of-Stake mechanism (DPoS). This allows IOTA token holders to stake their IOTA tokens to any validator of their choice. When someone stakes their IOTA tokens, it means those tokens are locked for the entire epoch. Users can withdraw their stake at any time, but new staking requests become active only at the start of the next epoch.
 
@@ -252,7 +252,7 @@ IOTA holders who stake their tokens to validators earn rewards for helping secur
 
 The total voting power in the IOTA Network is always 10,000. The voting power of each individual validator is similar to basis points. For example, a voting power of 101 = 1.01%. IOTA's quorum threshold (number of votes needed to confirm a transaction) is 6,667 (which is greater than 2/3). The voting power for a single validator is capped at 1,000 (10%) regardless of how much stake the validator has.
 
-## Staking functions {#staking-functions}
+## Staking functions
 
 IOTA supports the following API operations related to staking. You can find the source code in the [iota_system](https://github.com/iotaledger/iota/blob/develop/crates/iota-framework/packages/iota-system/sources/iota_system.move) module.
 
