--- a/docs/content/about-iota/tokenomics/gas-in-iota.mdx
+++ b/docs/content/about-iota/tokenomics/gas-in-iota.mdx
@@ -17,18 +17,18 @@ Finally, storage rebates are provided whenever a transaction deletes previously 
 
 The information on net gas fees displays in the [IOTA network explorer](https://explorer.iota.cafe/) for each transaction block.
 
-## Gas prices {#gas-prices}
+## Gas prices
 
-The [reference gas price](./gas-pricing.mdx#computation) translates the real-time cost of executing a transaction into IOTA units and the validator set updates it at each epoch boundary. Similarly, the [storage price](./gas-pricing.mdx#storage) translates the long-term cost of storing data on chain into IOTA units and updates infrequently; often remaining constant for various consecutive epochs. During regular network operations, all IOTA users can expect to pay the reference gas price and storage price for computation and storage, respectively.
+The [reference gas price](./gas-pricing.mdx#computation-gas-prices) translates the real-time cost of executing a transaction into IOTA units and the validator set updates it at each epoch boundary. Similarly, the [storage price](./gas-pricing.mdx#storage-gas-prices) translates the long-term cost of storing data on chain into IOTA units and updates infrequently; often remaining constant for various consecutive epochs. During regular network operations, all IOTA users can expect to pay the reference gas price and storage price for computation and storage, respectively.
 
-## Gas units {#gas-units}
+## Gas units
 
 Gas units include both
 
-- [Computation units](#computation)
-- [Storage units](#storage)
+- [Computation units](#computation-units)
+- [Storage units](#storage-units)
 
-### Computation units {#computation}
+### Computation units
 
 Different IOTA transactions require varying amounts of computational time for processing and execution. IOTA translates these varying operational loads into transaction fees by measuring each transaction in terms of computation units. In general, more complex transactions require more computation units.
 
@@ -41,13 +41,13 @@ Using bucketing accomplishes two important goals:
     - Frees users from optimizing their smart contracts to deliver marginal gains in gas costs via "gas golfing" — instead, they can focus on step-function improvements in their products and services.
     - Gives users the freedom to adjust per-instruction gas costs and experiment with new gas metering schemes without creating significant development disruption. This can happen frequently, so it's important that they do not rely on per-instruction gas costs remaining stable over time.
 
-### Storage units {#storage}
+### Storage units
 
 Similarly, IOTA transactions vary depending on the amount of new data written into on-chain storage. The variable storage units capture these differences by mapping the amount of bytes held in storage into storage units. The current IOTA schedule is linear and maps each byte into 100 storage units. So, for example, a transaction that stores 25 bytes costs 2,500 storage units, while a transaction that stores 75 bytes costs 7,500 units.
 
 Importantly, in IOTA's storage model users pay storage deposit fees for storing data in perpetuity but can also get a full rebate on previously stored data, if that data is deleted. Hence, the amount of storage fees that users pay are 100% rebateable. This storage deposit mechanism incentivizes users to minimize the storage burden they place on all nodes by reducing their storage requirements and cleaning up unused objects. 
 
-### Gas budgets {#gas-budgets}
+### Gas budgets
 
 Users must submit all transactions they need together with a gas budget. This provides a cap to the amount of gas fees paid, especially because sometimes it might be hard to perfectly forecast how much a transaction costs before the user submits it to the IOTA network.
 
@@ -63,7 +63,7 @@ Importantly, the minimum gas budget is 1000 NANOS (.000001 IOTA). This protects 
 
 As mentioned previously, the storage rebate is 100% of the originally paid storage fees. Because the gas budget applies to the totality of gas fees, it is often the case that a transaction only goes through if the gas budget is considerably higher than the net gas fees that a user ultimately pays.
 
-### Gas budget examples {#gas-budget-examples}
+### Gas budget examples
 
 The following table provides some examples of gas accounting on the IOTA network. Within the first two and last two rows, computation units are the same because transactions fall within the same bucket. However, the last two transactions are more complex than the first two and thus fall in a higher bucket. Finally, in the last transaction the storage rebate is large enough to fully offset the transaction gas fees and actually pays the user back a positive amount of IOTA.
 
