--- a/docs/content/about-iota/tokenomics/proof-of-stake.mdx
+++ b/docs/content/about-iota/tokenomics/proof-of-stake.mdx
@@ -4,14 +4,14 @@ title: Proof of Stake
 
 The IOTA platform relies on delegated proof-of-stake (DPoS) to determine the set of validators that process transactions.
 
-## IOTA token staking {#staking}
+## IOTA token staking
 
 Within each epoch, a fixed set of validators process operations, each with a specific amount of stake from IOTA token holders. 
 A validator's share of total stake is relevant in that it determines each validator's share of voting power for processing transactions. 
 Staking IOTA implies the IOTA tokens are locked for the entire epoch. 
 IOTA token holders are free to withdraw their IOTA or to change their selected validator when the epoch changes.
 
-## Economic model {#economic-model}
+## Economic model
 
 This section covers how the different components of the IOTA economy interact with each other to introduce the IOTA DPoS system. 
 For reference, see the Staking and Tokenomics diagram in the [IOTA Tokenomics](./tokenomics.mdx) overview.
@@ -47,7 +47,7 @@ $$
 ValidatorRewards_v \ = \ \Big(\beta_v+\delta_v(1-\beta_v)\Big)\mu_v\sigma_v \times TotalStakeRewards
 $$
 
-The $\mu_v$ variable captures the output of the [tallying rule](./gas-pricing.mdx#computation) computed as part of the [gas price mechanism](./gas-pricing.mdx) and corresponds to $\mu_v\geq1$ for performant validators and $\mu_v<1$ for non-performant validators. 
+The $\mu_v$ variable captures the output of the [tallying rule](./gas-pricing.mdx#computation-gas-prices) computed as part of the [gas price mechanism](./gas-pricing.mdx) and corresponds to $\mu_v\geq1$ for performant validators and $\mu_v<1$ for non-performant validators. 
 This variable ensures that validators have "skin in the game" and are incentivized to operate IOTA efficiently. 
 The $\sigma_v$ parameter captures each pool's share of total stake.
 
@@ -57,6 +57,6 @@ In the long-run, this incentive encourages users to shift the stake distribution
 On net, this design encourages validators to operate with low gas price quotes, but not too low or they receive slashed stake rewards. 
 Consequently, the IOTA gas price mechanism and DPoS system encourages a healthy competition for fair prices where validators set low gas fees while operating with viable business models.
 
-## IOTA incentives {#incentives}
+## IOTA incentives
 
 The IOTA economic model bestows IOTA users with an important monitoring role. On the one hand, users want their transactions processed as quickly and efficiently as possible. User clients, such as wallets, encourage this by prioritizing communication with the most responsive validators. Such efficient operations are compensated with boosted rewards relative to less responsive validators. On the other hand, IOTA token stakers receive the same boosted or penalized rewards as their selected validator. An unresponsive validator is thus doubly exposed to IOTA incentives: they lose directly through slashed rewards and indirectly through reduced user stake in future epochs as stakers move their tokens to more responsive validators.
