--- a/docs/content/developer/standards/closed-loop-token/action-request.mdx
+++ b/docs/content/developer/standards/closed-loop-token/action-request.mdx
@@ -36,7 +36,7 @@ public fun transfer<T>(
 ): ActionRequest<T>;
 ```
 
-## Request confirmation {#request-confirmation}
+## Request confirmation
 
 There are three ways to confirm an `ActionRequest` using a:
 
