--- a/docs/content/developer/standards/kiosk-apps.mdx
+++ b/docs/content/developer/standards/kiosk-apps.mdx
@@ -8,7 +8,7 @@ Kiosk apps are a way to extend the functionality of IOTA Kiosk while keeping the
 There are two types of apps:
 
 - [Basic apps](#basic-apps)
-- [Permissioned apps](#permissioned-apps)
+- [Permissioned apps](#permissioned-apps-using-the-kiosk-apps-api)
 
 ## Basic apps
 
@@ -58,7 +58,7 @@ module examples::kiosk_name_ext {
 }
 ```
 
-## Permissioned apps using the Kiosk Apps API {#permissioned-apps}
+## Permissioned apps using the Kiosk Apps API
 
 Permissioned apps use the Kiosk Apps API to perform actions in the kiosk. They usually imply interaction with a third party and provide guarantees for the storage access (preventing malicious actions from the seller).
 
