--- a/docs/content/references/event-query-and-subscription.mdx
+++ b/docs/content/references/event-query-and-subscription.mdx
@@ -17,11 +17,11 @@ A IOTA node emits the following types of events:
 - [New object event](#new-object-event)
 - [Epoch change event](#epoch-change-event)
 
-## Move event {#move-event}
+## Move event
 
 Move calls emit Move events. You can [define custom events](https://examples.iota.io/basics/events.html) in Move contracts.
 
-### Attributes {#attributes}
+### Attributes
 
 Move event attributes:
 
@@ -32,7 +32,7 @@ Move event attributes:
 - `fields`
 - `bcs`
 
-### Example Move event {#example-move-event}
+### Example Move event
 
 ```json
 {
@@ -51,18 +51,18 @@ Move event attributes:
 }
 ```
 
-## Publish event {#publish-event}
+## Publish event
 
 Publish events occur when you publish a package to the network.
 
-### Attributes {#attributes-1}
+### Attributes
 
 Publish event attributes:
 
 - `sender`
 - `packageId`
 
-### Example publish event {#example-publish-event}
+### Example publish event
 
 ```json
 {
@@ -73,11 +73,11 @@ Publish event attributes:
 }
 ```
 
-## Transfer object event {#transfer-object-event}
+## Transfer object event
 
 Transfer object events occur when you transfer an object from one address to another.
 
-### Attributes {#attributes-2}
+### Attributes
 
 Transfer event attributes:
 
@@ -89,7 +89,7 @@ Transfer event attributes:
 - `version`
 - `type`
 
-### Example transfer object event {#example-transfer-object-event}
+### Example transfer object event
 
 ```json
 {
@@ -107,18 +107,18 @@ Transfer event attributes:
 }
 ```
 
-## Delete object event {#delete-object-event}
+## Delete object event
 
 Delete object events occur when you delete an object.
 
-### Attributes {#attributes-3}
+### Attributes
 
 - `packageId`
 - `transactionModule`
 - `sender`
 - `objectId`
 
-### Example delete object event {#example-delete-object-event}
+### Example delete object event
 
 ```json
 {
@@ -131,11 +131,11 @@ Delete object events occur when you delete an object.
 }
 ```
 
-## New object event {#new-object-event}
+## New object event
 
 New object events occur when you create an object on the network.
 
-### Attributes {#attributes-4}
+### Attributes
 
 New object event attributes:
 
@@ -145,7 +145,7 @@ New object event attributes:
 - `recipient`
 - `objectId`
 
-### Example new object event {#example-new-object-event}
+### Example new object event
 
 ```json
 {
@@ -161,15 +161,15 @@ New object event attributes:
 }
 ```
 
-## Epoch change event {#epoch-change-event}
+## Epoch change event
 
 Epoch change events occur when an epoch ends and a new epoch starts.
 
-### Attributes {#attributes-5}
+### Attributes
 
 None, Epoch change events do not have any attributes. The event includes an Epoch ID associated with the `epochChange`.
 
-### Example epoch change event {#example-epoch-change-event}
+### Example epoch change event
 
 ```json
 {
@@ -177,15 +177,15 @@ None, Epoch change events do not have any attributes. The event includes an Epoc
 }
 ```
 
-## Checkpoint event {#checkpoint-event}
+## Checkpoint event
 
 A checkpoint event occurs for each checkpoint.
 
-### Attributes {#attributes-6}
+### Attributes
 
 None, Checkpoint events do not have any attributes. The event includes the Checkpoint sequence number associated with the checkpoint.
 
-### Example checkpoint event {#example-checkpoint-event}
+### Example checkpoint event
 
 ```json
 {
@@ -193,7 +193,7 @@ None, Checkpoint events do not have any attributes. The event includes the Check
 }
 ```
 
-## IOTA event query criteria {#iota-event-query-criteria}
+## IOTA event query criteria
 
 You can use the `EventQuery` criteria object to query a IOTA node and retrieve events that match query criteria.
 
@@ -209,13 +209,13 @@ You can use the `EventQuery` criteria object to query a IOTA node and retrieve e
 | Object      | Return events associated with the given object            | `{"Object":"0x727b37454ab13d5c1dbb22e8741bff72b145d1e660f71b275c01f24e7860e5e5"}` |
 | TimeRange   | Return events emitted in [start_time, end_time] interval  | `{"TimeRange":{"startTime":1669039504014, "endTime":1669039604014}}` |
 
-## Pagination {#pagination}
+## Pagination
 
 The Event Query API provides cursor-based pagination to make it easier to work with large result sets. You can provide a `cursor` parameter in paginated query to indicate the starting position of the query. The query returns the number of results specified by `limit`, and returns the `next_cursor` value when there are additional results. The maximum `limit` is 1000 per query.
 
 The following examples demonstrate how to create queries that use pagination for the results.
 
-### 1. Get all events an nft module emits, in descending time order {#example-step1}
+### 1. Get all events an nft module emits, in descending time order
 
 **Request**
 
@@ -331,7 +331,7 @@ curl --location --request POST '127.0.0.1:9000' \
 }
 ```
 
-### 2. Get all MintNFTEvent events {#example-step2}
+### 2. Get all MintNFTEvent events
 
 **Request**
 
@@ -409,7 +409,7 @@ curl --location --request POST '127.0.0.1:9000' \
 }
 ```
 
-### 3. Get all events and return 2 items per page in descending time order {#example-step3}
+### 3. Get all events and return 2 items per page in descending time order
 
 **Request**
 
@@ -484,15 +484,15 @@ curl --location --request POST '127.0.0.1:9000' \
 }
 ```
 
-## Subscribe to IOTA events {#subscribe-events}
+## Subscribe to IOTA events
 
 When you subscribe to the events described in the preceding sections, you can apply event filters to match the events you want to filter.
 
-## Event filters {#event-filters}
+## Event filters
 
 You can use `EventFilter` to filter the events included in your subscription to the event stream. `EventFilter` supports filtering on one attribute or a combination of attributes.
 
-### List of attributes that support filters {#attributes-supporting-filters}
+### List of attributes that support filters
 
 | Filter         | Description                                                      | Applicable to Event Type                                                                               | JSON-RPC Parameter Example                                                                |
 | -------------- | ---------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------- |
@@ -504,7 +504,7 @@ You can use `EventFilter` to filter the events included in your subscription to 
 | EventType      | Type of event described in the [Events](#event-types) section | MoveEvent<br/>Publish<br/>TransferObject<br/>DeleteObject<br/>NewObject<br/>EpochChange<br/>Checkpoint | `{"EventType":"Publish"}`                                                                 |
 | ObjectId       | Object ID                                                        | TransferObject<br/>DeleteObject<br/>NewObject                                                          | `{"ObjectId":"0x727b37454ab13d5c1dbb22e8741bff72b145d1e660f71b275c01f24e7860e5e5"}`       |
 
-### Combining filters {#combining-filters}
+### Combining filters
 
 IOTA provides a few operators for combining filters:
 
@@ -515,7 +515,7 @@ IOTA provides a few operators for combining filters:
 | All      | Combine a list of filters; returns true if all filters match the event  | `{"All":[{"EventType":"MoveEvent"}, {"Package":"<PACKAGE-ID>"}, {"Module":"nft"}]}`                 |
 | Any      | Combine a list of filters; returns true if any filter matches the event | `{"Any":[{"EventType":"MoveEvent"}, {"EventType":"TransferObject"}, {"EventType":"DeleteObject"}]}` |
 
-### Example using a combined filter {#example-combined-filter}
+### Example using a combined filter
 
 The following example demonstrates how to subscribe to Move events (`MoveEvent`) that a `<PACKAGE-ID>::nft` package emits:
 
