--- a/docs/content/references/iota-compared.mdx
+++ b/docs/content/references/iota-compared.mdx
@@ -11,7 +11,7 @@ Here are IOTA's key features:
 - IOTA's variant of Move and its object-centric data model make composable objects/NFTs possible
 - The blockchain-oriented [Move programming language](../developer/evm-to-move/why-move.mdx) eases the developer experience
 
-## Traditional blockchains {#traditional-blockchains}
+## Traditional blockchains
 
 Traditional blockchain validators collectively build a shared accumulator: a cryptographically binding representation of the state of the blockchain, a chain to which they add increments over time, called blocks. In blockchains that offer deterministic finality, every time validators want to make an incremental addition to the blockchain, i.e., a block proposal, they sequence the proposal. This protocol lets them form an agreement over the current state of the chain, whether the proposed increment is valid, and what the state of the chain will be after the new addition.
 
@@ -19,7 +19,7 @@ This method of maintaining common state over time has known practical success ov
 
 Yet it is inherently sequential: increments to the chain are added one at a time, like pearls on a string. In practice, this approach pauses the influx of transactions (often stored in a "mempool"), while the current block is under consideration.
 
-## IOTA's approach to validating new transactions {#validating}
+## IOTA's approach to validating new transactions
 
 A large number transactions do not have complex interdependencies with each other, since they operate on disconnected parts of the state. Often financial users just want to send an asset to a recipient, and the only data required to gauge whether this simple transaction is admissible is a fresh view of the sender's address. Hence IOTA takes the approach of only taking a lock - or "stopping the world" - for the relevant piece of data rather than the whole chain -- in this case, the address of the sender, which can only send one transaction at a time.
 
@@ -27,7 +27,7 @@ IOTA further expands this approach to more involved transactions that may explic
 
 This doesn't mean that IOTA as a platform never orders transactions with respect to each other, or that it allows owners to affect only their owned microcosm of objects. IOTA also processes transactions that have an effect on some shared state in a rigorous, consensus-ordered manner. They're just not the default use case. See the [State-of-the-art consensus](#state-of-the-art-consensus) section for details on the Narwhal and Bullshark consensus engine.
 
-## A collaborative approach to transaction submission {#tx-submission}
+## A collaborative approach to transaction submission
 
 IOTA validates transactions individually, rather than batching them in the traditional blocks. The key advantage of this approach is low latency; each successful transaction quickly obtains a certificate of finality that proves to anyone that the transaction will persists its effects on the IOTA network.
 
@@ -42,7 +42,7 @@ But the process of submitting a transaction is a bit more involved. That little 
 
 While those steps demand more of the sender, performing them efficiently can still yield a cryptographic proof of finality with minimum latency. Aside from crafting the original transaction itself, the session management for a transaction does not require access to any private keys and can be delegated to a third party.
 
-## A different approach to state {#state}
+## A different approach to state
 
 Because IOTA focuses on managing specific objects rather than a single aggregate of state, it also reports on them in a unique way:
 
@@ -51,21 +51,21 @@ Because IOTA focuses on managing specific objects rather than a single aggregate
 
 As a consequence, a IOTA Validator can exhibit a causal history of an object, showing its history since genesis. IOTA explicitly makes the bet that in many cases, the ordering of that causal history with the causal history of another object is irrelevant; and in the few cases where this information is relevant, IOTA makes this relationship explicit in the data.
 
-## Causal order vs. total order {#causal-order-vs-total-order}
+## Causal order vs. total order
 
 Unlike most existing blockchain systems (and as the reader may have guessed from the description of write requests above), IOTA does not always impose a total order on the transactions submitted by clients, with shared objects being the exception. Instead, many transactions are _causally_ ordered--if a transaction `T1` produces output objects `O1` that are used as input objects in a transaction `T2`, a validator must execute `T1` before it executes `T2`. Note that `T2` need not use these objects directly for a causal relationship to exist--e.g., `T1` might produce output objects which are then used by `T3`, and `T2` might use `T3`'s output objects. However, transactions with no causal relationship can be processed by IOTA validators in any order.
 
-## State-of-the-art consensus {#state-of-the-art-consensus}
+## State-of-the-art consensus
 
 Narwhal and Bullshark represent the latest variant of decades of work on multi-proposer, high-throughput consensus algorithms that reaches throughputs more than 130,000 transactions per second on a WAN, with production cryptography, permanent storage, and a scaled-out primary-worker architecture.
 
 The [Narwhal mempool](https://github.com/iotaledger/iota/tree/develop/narwhal) offers a high-throughput data availability engine and a scaled architecture, splitting the disk I/O and networking requirements across several workers. And Bullshark is a zero-message overhead consensus algorithm, leveraging graph traversals.
 
-## Where IOTA excels {#where-iota-excels}
+## Where IOTA excels
 
 This section summarizes the main advantages of IOTA with respect to traditional blockchains.
 
-### High performance {#high-performance}
+### High performance
 
 IOTA's main selling point is its unprecedented performance. The following bullet points summarize the main performance benefits of IOTA with respect to traditional blockchains:
 
@@ -74,21 +74,21 @@ IOTA's main selling point is its unprecedented performance. The following bullet
 - IOTA operates at network speed without waiting for system timeouts between protocol steps. This significantly reduces latency when the network is good and not under attack. In contrast, the security of a number of traditional blockchains (including most proof-of-work based blockchains) need to wait for predefined timeouts before committing transactions.
 - IOTA can take advantage of more machines per validator to increase its performance. Traditional blockchains are often designed to run on a single machine per validator (or even on a single CPU).
 
-### Performance under faults {#performance-under-faults}
+### Performance under faults
 
 IOTA runs a leaderless protocol to process simple transactions (i.e. containing only owned objects). As a result, faulty validators do not impact performance in any significant way. For transactions involving shared objects, IOTA employs a state-of-the-art consensus protocol requiring no [view-change sub-protocol](https://pmg.csail.mit.edu/papers/osdi99.pdf) and thus experiences only slight performance degradations. In contrast, most leader-based blockchains experiencing even a single validator's crash see their throughput fall and their latency increase (often by more than one order of magnitude).
 
-### Security assumptions {#security-assumptions}
+### Security assumptions
 
 Contrary to many traditional blockchains, IOTA does not make strong synchrony assumptions on the network. This means that IOTA maintains its security properties under bad network conditions (even excessively bad), network splits/partitions, or even powerful DoS attacks targeted on the validators. Sustained network attacks on synchronous blockchains (i.e., most proof-of-work based blockchains) can lead to double-spend of resources and deadlocks.
 
-### Efficient local read operations {#local-read-operations}
+### Efficient local read operations
 
 The reading process of IOTA enormously differs from other blockchains. Users interested in only a handful of objects and their history perform authenticated reads at a low granularity and low latency. IOTA creates a narrow family tree of objects starting from the genesis, allowing it to read only objects tied to the sender of the transaction. Users requiring a global view of the system (e.g., to audit the system) can take advantage of checkpoints to improve performance.
 
 In traditional blockchains, families are ordered with respect to each other to totally order transactions. This then requires querying a massive blob for the precise information needed. Disk I/O can become a performance bottleneck.
 
-### Easier developer experience {#easier-developer-experience}
+### Easier developer experience
 
 IOTA provides these benefits to developers:
 
@@ -96,11 +96,11 @@ IOTA provides these benefits to developers:
 - Asset-centric programming model
 - Easier developer experience
 
-## Engineering trade-offs {#engineering-trade-offs}
+## Engineering trade-offs
 
 This section presents the main disadvantages of IOTA with respect to traditional blockchains.
 
-### Design complexity {#design-complexity}
+### Design complexity
 
 While traditional blockchains require implementing only a single consensus protocol, IOTA requires two protocols: (i) a protocol based on Byzantine Consistent Broadcast to handle simple transactions, and (ii) a consensus protocol to handle transactions with shared objects. This means the IOTA team needs to maintain a much larger codebase.
 
@@ -108,7 +108,7 @@ Transactions involving shared objects require a little overhead (adding two extr
 
 Building an efficient synchronizer is harder in IOTA than in traditional blockchains. The synchronizer sub-protocol allows validators to update each other by sharing data, and it allows slow validators to catch up. Building an efficient synchronizer for traditional blockchains is no easy task, but still simpler than in IOTA.
 
-### Sequential writes in the simple case {#sequential-writes}
+### Sequential writes in the simple case
 
 Traditional blockchains totally order all client transactions with respect to each other. This design requires reaching consensus across validators, which is effective but slow.
 
@@ -116,7 +116,7 @@ As mentioned in previous sections, IOTA forgoes consensus for many transactions 
 
 The downside of allowing head-of-line blocking on the sender for these simple transactions is that the sender can send only one transaction at a time. As a result, it is imperative the transactions finalize quickly.
 
-### Complex total queries {#complex-total-queries}
+### Complex total queries
 
 IOTA can make total queries more difficult than in traditional blockchains since it does not always impose total order of transactions. Total queries are fairly rare with respect to local reads (see above) but useful in some scenarios. For example, a new validator joins the network and needs to download the total state to disk, or an auditor wishes to audit the entire blockchain.
 
@@ -124,7 +124,7 @@ IOTA mitigates this with checkpoints. A checkpoint is established every time an 
 
 IOTA uses the state commitment that arrives upon epoch change. IOTA requires a single answer from the multiple validators and leverages an accessory protocol to derive the hash representing the state of the blockchain. This protocol consumes little bandwidth and does not impede the ingestion of transactions. Validators produce checkpoints at every epoch change. IOTA requires the validators to also produce checkpoints even more frequently. So users may use these checkpoints to audit the blockchain with some effort.
 
-## Conclusion {#conclusion}
+## Conclusion
 
 In summary, IOTA offers many performance and usability gains at the cost of some complexity in less simple use cases. Direct sender transactions excel in IOTA. And complex smart contracts may benefit from shared objects where more than one user can mutate those objects (following smart contract specific rules). In this case, IOTA totally orders all transactions involving shared objects using a consensus protocol.
 
