--- a/docs/content/references/research-papers.mdx
+++ b/docs/content/references/research-papers.mdx
@@ -5,7 +5,7 @@ sidebar_label: Research Papers
 
 This document contains a list of research papers that are relevant to IOTA.
 
-## FastPay: High-Performance Byzantine Fault Tolerant Settlement {#fastpay}
+## FastPay: High-Performance Byzantine Fault Tolerant Settlement
 
 - **Link:** https://arxiv.org/abs/2003.11506
 - **Publication:** ACM Conference on Advances in Financial Technologies (AFT), 2020
@@ -17,7 +17,7 @@ This document contains a list of research papers that are relevant to IOTA.
   (consensus). The resulting system has low-latency for both confirmation and payment finality. Remarkably, each validator can be sharded across many
   machines to allow unbounded horizontal scalability.
 
-## Narwhal and Tusk: A DAG-based Mempool and Efficient BFT Consensus {#narwhal-and-tusk}
+## Narwhal and Tusk: A DAG-based Mempool and Efficient BFT Consensus
 
 - **Link:** https://arxiv.org/abs/2105.11827
 - **Publication:** EuroSys, 2022
@@ -34,7 +34,7 @@ This document contains a list of research papers that are relevant to IOTA.
   without any latency increase. Tusk achieves 160,000 tx/sec with about 3 seconds latency. Under faults, both protocols maintain high throughput, but
   Narwhal-HotStuff suffers from increased latency.
 
-## Zef: Low-latency, Scalable, Private Payments {#zef}
+## Zef: Low-latency, Scalable, Private Payments
 
 - **Link:** https://arxiv.org/abs/2201.05671
 - **Publication:** Not published yet (under submission)
@@ -50,7 +50,7 @@ This document contains a list of research papers that are relevant to IOTA.
   scalability and demonstrate a confirmation time under one second at nominal capacity. Compared to existing anonymous payment systems based on a blockchain,
   this represents a latency speedup of three orders of magnitude, with no theoretical limit on throughput.
 
-## Bullshark: DAG BFT Protocols Made Practical {#bullshark}
+## Bullshark: DAG BFT Protocols Made Practical
 
 - **Link:** https://arxiv.org/abs/2201.05677
 - **Publication:** Not published yet (under submission)
@@ -61,7 +61,7 @@ This document contains a list of research papers that are relevant to IOTA.
   a standalone partially synchronous version of Bullshark and evaluate it against the state of the art. The resulting protocol is embarrassingly simple 20 LOC
   on top of a DAG-based mempool implementation) and highly efficient, achieving for example, 125k transactions per second and 2 seconds latency with 50 nodes.
 
-## Be Aware of Your Leaders {#awareness}
+## Be Aware of Your Leaders
 
 - **Link:** https://arxiv.org/abs/2110.00960
 - **Publication:** Financial Cryptography and Data Security (FC), 2022
@@ -77,7 +77,7 @@ This document contains a list of research papers that are relevant to IOTA.
   drastic performance improvements: it increases throughput over 2x in faultless settings and provides a 20x throughput increase and 5x latency reduction
   in the presence of faults.
 
-## Twins: BFT Systems Made Robust {#twins}
+## Twins: BFT Systems Made Robust
 
 - **Link:** https://arxiv.org/abs/2004.10617
 - **Publication:** International Conference on Principles of Distributed Systems (OPODIS), 2021
@@ -95,7 +95,7 @@ This document contains a list of research papers that are relevant to IOTA.
   several known attacks against other BFT protocols were materialized as Twins scenarios. In all cases, the target protocols break within fewer than a dozen
   protocol rounds. Hence it is realistic for the Twins approach to expose the problems.
 
-## SybilQuorum: Open Distributed Ledgers Through Trust Networks {#sybilquorum}
+## SybilQuorum: Open Distributed Ledgers Through Trust Networks
 
 - **Link:** https://arxiv.org/abs/1906.12237
 - **Publication:** Not published
